--- a/src/scss/_features.scss
+++ b/src/scss/_features.scss
@@ -1,7 +1,36 @@
 $features-block-padding:          40px 0;
 $features-block-bg:               #f5f5f5;
+$features-bg:                     #fff;
+$features-br:                     6px;
+$f-icon-fz:                       85px;
+
 
 .features-block {
   background: $features-block-bg;
   padding: $features-block-padding;
+  .features {
+    background: $features-bg;
+    border-radius: $features-br;
+    padding: 35px 60px;
+    &__icon {
+      margin-bottom: 35px;
+      display: flex;
+      i {
+        font-size: $f-icon-fz;
+        color: $brand-second;
+        margin: auto;
+      }
+    }
+    &__descr {
+      text-align: center;
+      .f-descr__title {
+        display: block;
+        font-weight: bold;
+        font-size: 30px;
+      }
+      .f-descr__text {
+        display: block;
+      }
+    }
+  }
 }
