--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -15,7 +15,7 @@ $gray:                   lighten($gray-base, 33.5%) !default; // #555
 $gray-light:             lighten($gray-base, 46.7%) !default; // #777
 $gray-lighter:           lighten($gray-base, 93.5%) !default; // #eee
 
-$brand-primary:         #0cad54 !default; // #337ab7
+$brand-primary:         #7dac3f !default; // #337ab7
 $brand-second:          #aa8c67 !default;
 $brand-success:         #5cb85c !default;
 $brand-info:            #5bc0de !default;
