--- a/src/scss/_headings.scss
+++ b/src/scss/_headings.scss
@@ -1,4 +1,4 @@
-$headings_color:           #000;
+$headings_color:           $gray-base;
 $headings_mb:              40px;
 $heading-fz:               30px;
 
