--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -33,7 +33,7 @@ $body-bg:               #fff !default;
 $text-color:            #9b9898 !default;
 
 //** Global textual link color.
-$link-color:            $brand-primary !default;
+$link-color:            #fff !default;
 //** Link hover color set via `darken()` function.
 $link-hover-color:      darken($link-color, 15%) !default;
 //** Link hover decoration.
