--- a/src/scss/all.scss
+++ b/src/scss/all.scss
@@ -49,6 +49,7 @@
 @import "../../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/utilities";
 @import "../../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/responsive-utilities";
 
+@import "header";
 @import "advantages";
 @import "headings";
 @import "features";
