--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -1,3 +1,8 @@
+$header-navi-mb:          20%;
+$header-navi-padding:     40px 0;
+$header-navi-bb:          1px solid #f5f5f5;
+$pushy-btn-fz:            30px;
+
 .header {
   overflow: hidden;
   video {
@@ -18,13 +23,17 @@
     left: 0;
     width: 100%;
     height: 100%;
+    .menu-btn {
+      font-size: $pushy-btn-fz;
+      display: none;
+    }
     .header__navi {
-      margin-bottom: 20%;
-      padding: 40px 0;
+      margin-bottom: $header-navi-mb;
+      padding: $header-navi-padding;
       display: flex;
       justify-content: space-between;
-      align-items: center;
-      border-bottom: 1px solid #f5f5f5;
+      align-items: baseline;
+      border-bottom: $header-navi-bb;
       .header__list {
         display: inline-flex;
         justify-content: space-between;
@@ -98,3 +107,24 @@
 :-moz-placeholder           {font-size: 14px;}/* Firefox 18- */
 :-ms-input-placeholder      {font-size: 14px;}
 
+@media (min-width: 768px) and (max-width: 991px) {
+  .header {
+    .header__container {
+      .header__navi {
+        justify-content: space-between;
+        .header__list {
+          display: none;
+        }
+        .site-name {
+          display: none;
+        }
+      }
+      .menu-btn {
+        display: block;
+      }
+      .header__input {
+        width: 85%;
+      }
+    }
+  }
+}
