--- a/src/scss/all.scss
+++ b/src/scss/all.scss
@@ -50,6 +50,7 @@
 @import "../../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/responsive-utilities";
 
 @import "header";
+@import "pushy";
 @import "advantages";
 @import "headings";
 @import "features";
